fixed category banners too narrow

--- a/styles/Category.module.css
+++ b/styles/Category.module.css
@@ -1,5 +1,5 @@
 .mainContainer {
-	margin: 0 2rem;
+	/* margin: 0 2rem; */
 	width: 100%;
 	height: 100%;
 	display: flex;
